@@ -1,6 +1,0 @@
-<RCC>
-  <qresource>
-    <file>Resources/icon_ajb.svg</file>
-    <file>Resources/symbols.txt</file>
-  </qresource>
-</RCC>
